overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -194,6 +194,7 @@ Header
 --------------------------------------------------*/
 header {
   z-index: 100;
+  box-sizing: border-box;
   display: flex;
   position: sticky;
   top: 0;
@@ -292,6 +293,8 @@ main {
   flex-direction: column;
   align-items: stretch;
   flex-grow: 1;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 .home {
   display: flex;
@@ -701,7 +704,7 @@ Header
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 6.5rem;
+    top: 6rem;
     left: 0;
     align-items: flex-start;
     justify-content: center;
